v24-25.1/allpodd.yaml
# Save the output of this file and use kubectl create -f to import
# it into Kubernetes.
#
# Created with podman-4.9.3
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-04-13T16:40:58Z"
  labels:
    app: allpodd
  name: allpodd
spec:
  ports:
  - name: "80"
    nodePort: 31295
    port: 80
    targetPort: 80
  - name: "81"
    nodePort: 32365
    port: 81
    targetPort: 81
  selector:
    app: allpodd
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-04-13T16:40:58Z"
  labels:
    app: allpodd
  name: allpodd
spec:
  containers:
  - env:
    - name: TERM
      value: xterm
    image: localhost/app:latest
    imagePullPolicy: Never
    name: app
    ports:
    - containerPort: 80
    - containerPort: 81
    stdin: true
    tty: true
  - env:
    - name: TERM
      value: xterm
    image: localhost/bidrag-db:latest
    imagePullPolicy: Never
    name: bidrag-db
    stdin: true
    tty: true
    volumeMounts:
    - mountPath: /var/www/bidrag.db
      name: bidrag-db-vol
  - env:
    - name: TERM
      value: xterm
    image: localhost/pseudonym-db:latest
    imagePullPolicy: Never
    name: pseudonym-db
    stdin: true
    tty: true
    volumeMounts:
    - mountPath: /var/www/pseudonym.db
      name: pseudonym-db-vol
  - env:
    - name: TERM
      value: xterm
    image: localhost/web:latest
    imagePullPolicy: Never
    name: web
    stdin: true
    tty: true
  volumes:
  - hostPath:
      path: /mnt/c/Users/Even_/RustroverProjects/BTS4320-Security-and-privacy-in-cloud-services/v24-25.1/data/bidrag.db
      type: File
    name: bidrag-db-vol
  - hostPath:
      path: /mnt/c/Users/Even_/RustroverProjects/BTS4320-Security-and-privacy-in-cloud-services/v24-25.1/data/pseudonym.db
      type: File
    name: pseudonym-db-vol
