v24-25.1/bidrag-pod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bidrag-pod
  name: bidrag-pod
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "81"
    port: 81
    targetPort: 81
  selector:
    app: bidrag-pod
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: bidrag-pod
  name: bidrag-pod
spec:
  containers:
  - env:
    - name: TERM
      value: xterm
    - name: API_KEY
      valueFrom:
        secretKeyRef:
          name: api-key-secret
          key: service-key
    image: localhost/app:latest
    imagePullPolicy: Never
    name: app
    ports:
    - containerPort: 80
    - containerPort: 81
    stdin: true
    tty: true
  - env:
    - name: TERM
      value: xterm
    - name: API_KEY
      valueFrom:
        secretKeyRef:
          name: api-key-secret
          key: service-key
    image: localhost/bidrag-db:latest
    imagePullPolicy: Never
    name: bidrag-db
    stdin: true
    tty: true
    volumeMounts:
    - mountPath: /var/www/bidrag.db
      name: bidrag-db-vol
  - env:
    - name: TERM
      value: xterm
    image: localhost/web:latest
    imagePullPolicy: Never
    name: web
    stdin: true
    tty: true
  volumes:
  - hostPath:
      path: /var/www/bidrag.db
      type: File
    name: bidrag-db-vol
